Specify role in test playbook, based on test config in ansible.cfg

--- a/tests/test.yml
+++ b/tests/test.yml
@@ -1,8 +1,5 @@
 - hosts: container
   remote_user: test
 
-  vars_files:
-    - ../defaults/main.yml
-
-  tasks:
-    - include: ../tasks/main.yml
+  roles:
+    - ansible-virt-import
